# android_termux_opencl

./: 0_clean.sh  2_build_uv.sh  3_build_app.sh  CMakeLists.txt  README.md  env.sh  unuse_prepare_ndk_toolchain.sh
cmake/: FindUV.cmake
src/android_opencl/: Chrono.h  Log.cpp  Log.h  Object.h  OclDevice.cpp  OclDevice.h  OclError.cpp  OclError.h  OclKernel.cpp  OclKernel.h  OclLib.cpp  OclLib.h  OclPlatform.cpp  OclPlatform.h  OclVendor.h  String.cpp  String.h  android_opencl.cmake  cl.h
src/main/: hello.cpp  hello_cl.h  main.cmake
